Update React to development mode
This update launches react in development mode and supports hot reload. In addition, deleted default static files.

--- a/ui/Dockerfile.ui
+++ b/ui/Dockerfile.ui
@@ -7,25 +7,25 @@ WORKDIR /app
 # Copy app code
 COPY ui/package.json /app/package.json
 COPY ui/package-lock.json /app/package-lock.json
+COPY ui/ /app
 
 # Step 4: Install the dependencies
 RUN npm install
-
-# CPY APP CODE
-COPY ui/ ./
 
 # Step 6: Build the app for production
 RUN npm run build
 
 # Step 7: Use a lightweight server to serve the production build
 # Use an official Nginx image
-FROM nginx:alpine
+# FROM nginx:alpine
 
 # Step 8: Copy the build output to the Nginx HTML directory
-COPY --from=0 /app/build /usr/share/nginx/html
+# COPY --from=0 /app/build /usr/share/nginx/html
 
 # Step 9: Expose the port the app will run on
 EXPOSE 80
 
 # Step 10: Start Nginx when the container starts
 # CMD ["nginx", "-g", "daemon off;"]
+
+CMD ["npm", "start"]
